--- a/public/css/destacados.css
+++ b/public/css/destacados.css
@@ -12,7 +12,7 @@ body {
     padding: 0;
 }
 .swiper-container {
-    width: 70%;
+    width: 65%;
     height: 350px;
 
 }
@@ -77,7 +77,7 @@ body {
 }
 .product-grid .product-links{
     background: white;
-    width:150px;
+    width:130px;;
     padding: 3px 0;
     margin:0;
     list-style: none;
@@ -96,7 +96,9 @@ body {
 .product-grid:hover .product-links li{
     margin: 0 2px;
     display:inline-block;
-
+}
+.product-grid .product-links li a{
+    display:none;
 }
 .product-grid:hover .product-links li a{
     background:white;
